--- a/index.html
+++ b/index.html
@@ -78,25 +78,38 @@
         // Step 1: Create Function to Change Title and rewrite h1 element to "Celebrate Michigan Football!"
         //function
 
+        document.getElementsByTagName("h1")[0].innerHTML="Celebrate Michigan Football!";
+
             //Step 2: log the message to the console
+        console.log(document.getElementsByTagName("h1")[0]);
 
 
         //Step 3: style the background to color #003366
+        document.body.style.backgroundColor = "#003366";
 
         // Step 4: Add the correct ID for the button, create an element 'p' and add a message "2023 Champions!" to p
-        document.getElementById("add ID here").addEventListener("click", function() {
-
+        document.getElementById("changeTitleButton").addEventListener("click", function() {
+            const gameDayMessage = document.createElement("p"); 
+            gameDayMessage.textContent = "2023 Champions!";
             document.getElementById("message").appendChild(gameDayMessage); // Add to the message div
         });
 
         const playerItems = document.querySelectorAll("li");
         // Step 5: Use a conditional statement for playerItems. If there are more than 5 players, log a special message to the console "Go Blue, so many great players in one season!
+        if (playerItems.length > 5) {
+            console.log("Go Blue, so many great players in one season!");
+        }
+
+        if (playerItems.length > 4) {
+            console.log("Go Blue, so many great players in one season!");
+        }
 
         //Try it out with length > 4
 
         function displayInformation() {
-            // Step 6: Update the three span elements using ONLY JavaScript
-
+            document.getElementById("URL").textContent = window.location.href;
+            document.getElementById("items").textContent = playerItems.length;
+            document.getElementById("time").textContent = new Date();
         }
     </script>
 </body>
